--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 rocket = "0.5"
 thiserror = "1.0"
 toml = { version = "0.8", default-features = false, features = ["parse"] }
+# tree_magic_mini = "3.1"
+tree_magic_mini = {git = "https://github.com/mbrubeck/tree_magic.git"}
 
 [dependencies.sqlx]
 version = "0.7"
