--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 axum = "0.7"
 tokio = {version="1.0",features=["full"]}
 sqlx = {version="0.8",default-features=false,features=["sqlite", "runtime-tokio","macros","migrate"]}
+#middleware
+tower-http = { version = "0.6", features = ["cors"] }
 
 #parsing
 serde = "1.0"
@@ -17,7 +19,7 @@ tree_magic_mini = {git = "https://github.com/mbrubeck/tree_magic.git"}
 # tree_magic_mini = "3.1"
 
 #utilities
-tokio-util = { version = "0.7.12", features = ["io-util", "full"] }
+tokio-util = { version = "0.7", features = ["io-util", "full"] }
 futures = "0.3"
 
 [profile.release]
