--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ futures = "0.3"
 zstd = { version = "0.13", default-features = false }
 duration-str = { version = "0.11", features = ["serde"], default-features = false }
 
+[build-dependencies]
+minify-html = {version = "0.15"}
+zstd = { version = "0.13", default-features = false }
+
 [profile.release]
 strip=true
 lto=true
