--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = {version="1.0",features=["full"]}
 sqlx = {version="0.8",default-features=false,features=["sqlite", "runtime-tokio","macros","migrate"]}
 #middleware
 tower-http = { version = "0.6", features = ["cors"] }
+tower-service = "0.3"
 
 #parsing
 serde = "1.0"
